generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum UserRole {
  USER
  COMPANY
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  userAgent    String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, userAgent], name: "userId_userAgent")
}

model User {
  id                    String                 @id @default(cuid())
  name                  String?
  firstName             String?
  lastName              String?
  email                 String?                @unique
  emailVerified         DateTime?
  password              String?
  image                 String?
  accounts              Account[]
  sessions              Session[]
  role                  UserRole               @default(USER)
  isTwoFactorEnabled    Boolean                @default(false)
  twoFactorConfirmation TwoFactorConfirmation?
  companies             Company[] 
}

model Account {
  id                String  @id @default(cuid())
  userId            String  @unique
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model VerificationToken {
  id      String   @id @default(cuid())
  email   String   @unique
  token   String   @unique
  expires DateTime

  @@unique([email, token])
}

model PasswordResetToken {
  id String @id @default(cuid())
  email String  @unique
  token String @unique
  expires DateTime

  @@unique([email, token])
}

model TwoFactorToken {
  id      String   @id @default(cuid())
  email   String   @unique
  token   String   @unique
  expires DateTime

  @@unique([email, token])
}

model TwoFactorConfirmation {
  id      String   @id @default(cuid())
  expires DateTime

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId])
}

model Company {
  id String   @id @default(cuid()) @unique
  createBy   User   @relation(fields: [createById], references: [id], onDelete: Cascade)
  createById  String @unique
  name String
  email String
  numberOfEmployee Int
  direction Direction[]
  officeAddress OfficeAddress[]
}

model Direction {
  id String   @id @default(cuid()) @unique
  name String
  description String
  company Company[]
}

model OfficeAddress {
  id String   @id @default(cuid()) @unique
  country String

  companyId String
  company   Company   @relation(fields: [companyId], references: [id], onDelete: Cascade)

  state String
  region String
  city String
  street String
  zipCode String
}