//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  userAgent String [not null]
  expires DateTime [not null]
  user User [not null]

  indexes {
    (userId, userAgent) [unique]
  }
}

Table User {
  id String [pk]
  name String
  firstName String
  lastName String
  email String [unique]
  emailVerified DateTime
  password String
  image String
  accounts Account [not null]
  sessions Session [not null]
  role UserRole [not null, default: 'USER']
  isTwoFactorEnabled Boolean [not null, default: false]
  twoFactorConfirmation TwoFactorConfirmation
  companies Company [not null]
}

Table Account {
  id String [pk]
  userId String [unique, not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table VerificationToken {
  id String [pk]
  email String [unique, not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (email, token) [unique]
  }
}

Table PasswordResetToken {
  id String [pk]
  email String [unique, not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (email, token) [unique]
  }
}

Table TwoFactorToken {
  id String [pk]
  email String [unique, not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (email, token) [unique]
  }
}

Table TwoFactorConfirmation {
  id String [pk]
  expires DateTime [not null]
  userId String [unique, not null]
  user User [not null]
}

Table Company {
  id String [pk]
  createBy User [not null]
  createById String [unique, not null]
  name String [not null]
  email String [not null]
  numberOfEmployee Int [not null]
  direction Direction [not null]
  officeAddress OfficeAddress [not null]
}

Table Direction {
  id String [pk]
  name String [not null]
  description String [not null]
  company Company [not null]
}

Table OfficeAddress {
  id String [pk]
  country String [not null]
  companyId String [not null]
  company Company [not null]
  state String [not null]
  region String [not null]
  city String [not null]
  street String [not null]
  zipCode String [not null]
}

Table CompanyToDirection {
  directionId String [ref: > Direction.id]
  companyId String [ref: > Company.id]
}

Enum UserRole {
  USER
  COMPANY
}

Ref: Session.userId > User.id [delete: Cascade]

Ref: Account.userId > User.id [delete: Cascade]

Ref: TwoFactorConfirmation.userId - User.id [delete: Cascade]

Ref: Company.createById > User.id [delete: Cascade]

Ref: OfficeAddress.companyId > Company.id [delete: Cascade]